cambios Agregamos sitio twitch

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola Estudiantes éste es mi sitio web 
+        Hola amigos éste es mi sitio web 
     </p>
 </body>
 </html>
